Fixed buttons text Alignment

--- a/frontend/public/css/styles.css
+++ b/frontend/public/css/styles.css
@@ -192,6 +192,10 @@ h5 {
   color: var(--orange);
 }
 
+.btn-contact {
+  font-size: 12px !important;
+}
+
 @media (max-width: 767.98px) {
   .sidebar {
     top: 5rem;
